<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EarthQuakes</string>
    <string name="hello_world">Hello world!</string>
    <string name="autorefresh_switch_key">settings_autorefresh</string>
    <string name="action_settings">Settings</string>
    <string name="interval_list_key">settings_interval</string>
    <string name="magnitude_list_key">settings_magnitude</string>
    <string name="magnitude_default_value">1</string>
    <string name="interval_default_value">30 min</string>
    <string name="wifi_settings">WiFi Settings</string>
    <string name="data_settings">Data Settings</string>
    <string name="settings">System Settings</string>
    <string name="title_activity_fragment_settings">Title</string>
    <string name="title_activity_earth_quake_details">EarthQuakeDetails</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_map">MapActivity</string>

</resources>
